--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<div class="col-lg-6 col-md-7 col-12">
 							<!-- Top Contact -->
 							<ul class="top-contact">
-								<li><i class="fa fa-phone"></i>+880 1234 56789</li>
+								<li><i class="fa fa-phone"></i>+08067143735</li>
 								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com">support@yourmail.com</a></li>
 							</ul>
 							<!-- End Top Contact -->
@@ -188,7 +188,7 @@
 						<div class="row">
 							<div class="col-lg-7">
 								<div class="text">
-									<h1>DigitalWitchng Provides IT support training <span>Medical</span> where you can be come a Virtual Asistant <span>Trust Us!</span></h1>
+									<h1>IndomakHub IT Training Institute <span>DevOps</span> where you can be come a Virtual Asistant <span>Trust Us!</span></h1>
 									<p>The power of IT Support make money while at home. </p>
 									<div class="button">
 										<a href="#" class="btn">Get Appointment</a>
