--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							<!-- Top Contact -->
 							<ul class="top-contact">
 								<li><i class="fa fa-phone"></i>+08067143735</li>
-								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com">support@yourmail.com</a></li>
+								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com">softindomak@gmail.com</a></li>
 							</ul>
 							<!-- End Top Contact -->
 						</div>
@@ -170,7 +170,7 @@
 						<div class="row">
 							<div class="col-lg-7">
 								<div class="text">
-									<h1>Pod13 Cohort-4 <span>Cloud & IT training support</span> Services and Sport Services That You Can <span>Trust!</span></h1>
+									<h1>IndomakHub <span>Cloud & IT training support</span> Services and Sport Services That You Can <span>Trust!</span></h1>
 									<p>DevOps the power of automation is here to stay. </p>
 									<div class="button">
 										<a href="#" class="btn">Get Appointment</a>
