--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<div class="col-lg-6 col-md-7 col-12">
 							<!-- Top Contact -->
 							<ul class="top-contact">
-								<li><i class="fa fa-phone"></i>+08067143735</li>
+								<li><i class="fa fa-phone"></i>08067143735</li>
 								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com">softindomak@gmail.com</a></li>
 							</ul>
 							<!-- End Top Contact -->
